# sandbox

./: .gitignore  README.md
cpp/: CMakeLists.txt  README.md
cpp/src/: 01_hello_world.cpp  02_cpp_practice.cpp
javascript/: README.md  eslint.config.mjs  package-lock.json  package.json
javascript/src/components/: PLACEHOLDER.md
python/: README.md  pyproject.toml
python/app/: 02_tensors.py  03_tensor_manip.py
python/app/notebooks/: ai_basics.ipynb  hello_world.ipynb
