[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.5.1",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "ruff>=0.15.21",
    "torch>=2.13.0",
    "torchvision>=0.28.0",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".venv",
    "__pycache__",
    "migrations",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (unused imports/vars, undefined names)
    "I",    # isort (import sorting)
    "B",    # flake8-bugbear (common bug patterns, e.g. mutable default args)
    "C4",   # flake8-comprehensions (simplify list/dict/set comprehensions)
    "UP",   # pyupgrade (modernize syntax for your target Python version)
    "SIM",  # flake8-simplify (simplify unnecessarily complex code)
]
ignore = [
    "E501",  # line too long (Black already handles this)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
